# sigma

./: Cargo.toml  LICENSE  README.md  USER_GUIDE.md  pyproject.toml
examples/: demo_mandelbrot.sg  demo_neural.sg  demo_transform.sg
src/: ast.rs  compiler.rs  domain.rs  lib.rs  main.rs  parser.rs  stdlib.rs  type_checker.rs  types.rs  vm.rs
