[package]
name = "sigma"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sigma-cli"
path = "src/main.rs"

[lib]
name = "sigma"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "num-complex", "auto-initialize"] }
numpy = "0.27"
clap = { version = "4.4", features = ["derive"] }
ndarray = "0.17"
num-complex = "0.4"
chumsky = "0.9"
ariadne = "0.3"

[profile.release]
debug = false
